@@ -1053,13 +1053,16 @@ WIDGET_DEFAULT = {
         "vehicle_color_yellow": "#FFFF00",
         "vehicle_outline_color": "#88000000",
         "vehicle_outline_width": 1,
+        "enable_radar_fade": True,
+        "radar_fade_in_radius": 0.8,
+        "radar_fade_out_radius": 0.98,
         "show_background": False,
         "bkg_color": "#222222",
         "show_circle_background": False,
         "bkg_color_circle": "#66222222",
-        "show_fade_out": True,
-        "fade_in_radius": 0.6,
-        "fade_out_radius": 0.98,
+        "show_edge_fade_out": True,
+        "edge_fade_in_radius": 0.6,
+        "edge_fade_out_radius": 0.98,
         "show_overlap_indicator": True,
         "overlap_detection_range_multiplier": 6,
         "indicator_size_multiplier": 8,
